# raytracing-final

./: CMakeLists.txt  README.md  main.cpp
geometry/: box.h  bvh.h  hittable.h  hittable_list.h  sphere.h  triangle.h  volumn.h  xy_rect.h
material/: material.h  perlin.h
models/capitan/: CA_shield2_diff.tga:Zone.Identifier
models/others/: book_summary  tutorial
models/spiderman/: spider.mtl
models/spiderman1/: spider.mtl
scene/: scene.h
texture/: texture.h  triangle_texture.h
utils/: aabb.h  carmera.h  obj_loader.h  ray.h  rtweekend.h  vec3.h
